cmake_minimum_required(VERSION 3.0)
project(cfbf)


if (${CMAKE_SYSTEM_NAME} STREQUAL "iOS")
    set(CMAKE_OSX_ARCHITECTURES armv7;armv7s;arm64;i386;x86_64)
    set(CMAKE_OSX_DEPLOYMENT_TARGET 9.3)
    set(CMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH NO)
    set(CMAKE_IOS_INSTALL_COMBINED YES)
    set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/ios)
endif()


aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_DIR)
add_library(${PROJECT_NAME} STATIC ${SRC_DIR})
file(
    COPY ${PROJECT_SOURCE_DIR}/src/
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/public/
    FILES_MATCHING
        PATTERN *.h
)
install(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${PROJECT_BINARY_DIR}
)